--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,33 +1,42 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "net.runningcode"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'de.greenrobot:greendao:2.0.0'
+//    compile 'de.greenrobot:greendao:2.0.0'
 //    compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.yolanda.nohttp:nohttp:+'
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.zhy:autolayout:1.4.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 //    testCompile 'junit:junit:4.12'
 }
