--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "net.runningcode"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,18 +25,24 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/java']//, 'src/main/java-gen'
+        }
+    }
+
 }
 
 dependencies {
     compile 'com.android.support:recyclerview-v7:+'
-//    compile 'de.greenrobot:greendao:2.0.0'
+    compile 'de.greenrobot:greendao:2.0.0'
 //    compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.yolanda.nohttp:nohttp:+'
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+//    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.zhy:autolayout:1.4.3'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
