--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,10 @@
         android:icon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:name=".RunningCodeApplication"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LogoActivity"
+            android:name=".IndexActivity"
              >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,8 +43,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".IndexActivity" android:screenOrientation="portrait" />
-        <activity android:name=".express.ExpressActivity" android:screenOrientation="portrait" />
+        <!--<activity android:name=".IndexActivity" android:screenOrientation="portrait" />-->
+        <activity android:name=".express.ExpressActivity" android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".phone.PhoneActivity" android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".express.CaptureActivity" android:screenOrientation="portrait" />
 
         <service android:name="com.amap.api.location.APSService"></service>
