--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 //    compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.yolanda.nohttp:nohttp:+'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
 //    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.github.bumptech.glide:glide:3.5.2'
