--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 23
@@ -35,7 +36,7 @@ android {
 
 dependencies {
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'de.greenrobot:greendao:2.0.0'
+//    compile 'de.greenrobot:greendao:2.0.0'
 //    compile 'com.squareup.okhttp3:okhttp:3.0.1'
     compile 'com.yolanda.nohttp:nohttp:+'
     compile 'com.android.support:appcompat-v7:23.2.1'
