--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "net.runningcode"
         minSdkVersion 21
