--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission  android:name="android.permission.CALL_PHONE" />
 
+    <permission
+        android:name="net.runningcode.permission.MIPUSH_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="net.runningcode.permission.MIPUSH_RECEIVE" />
+
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -60,12 +67,60 @@
 
         <service android:name="com.amap.api.location.APSService"></service>
 
+        <!-- xiaomi push-->
+
+        <service
+            android:name="com.xiaomi.push.service.XMPushService"
+            android:enabled="true"
+            android:process=":pushservice" />
+        <service
+            android:name="com.xiaomi.mipush.sdk.PushMessageHandler"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name="com.xiaomi.mipush.sdk.MessageHandleService"
+            android:enabled="true" />
+
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.NetworkStatusReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name="com.xiaomi.push.service.receivers.PingReceiver"
+            android:exported="false"
+            android:process=":pushservice" >
+            <intent-filter>
+                <action android:name="com.xiaomi.push.PING_TIMER" />
+            </intent-filter>
+        </receiver>
+        <receiver
+            android:name=".MiPushMessageReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.RECEIVE_MESSAGE" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.ERROR" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.xiaomi.mipush.MESSAGE_ARRIVED" />
+            </intent-filter>
+
+        </receiver>
+        <!-- miPush end -->
+
+
         <meta-data android:name="design_width" android:value="768"/>
         <meta-data android:name="design_height" android:value="1280"/>
         <meta-data android:name="com.amap.api.v2.apikey" android:value="80e8e106504b233f97f429699d55602d"/>
-        <meta-data android:name="UMENG_APPKEY" android:value="574cfead67e58ebf07000982" />
-        <meta-data android:name="UMENG_CHANNEL" android:value="${CHANNEL}" />
-        <meta-data android:name="UMENG_MESSAGE_SECRET" android:value="fd6354cd876bc63b62ee609b9a9f1f8a" />
+        <!--<meta-data android:name="UMENG_APPKEY" android:value="574cfead67e58ebf07000982" />-->
+        <!--<meta-data android:name="UMENG_MESSAGE_SECRET" android:value="fd6354cd876bc63b62ee609b9a9f1f8a" />-->
+        <meta-data android:name="CHANNEL" android:value="${CHANNEL}" />
     </application>
 
 </manifest>
