--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "net.runningcode"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.2"
         manifestPlaceholders = [ CHANNEL:"default" ]
     }
     packagingOptions {
@@ -38,7 +38,7 @@ android {
         baidu {}
         c360 {}
         QQ{}
-
+        sougou{}
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [CHANNEL: name]
         }
@@ -64,6 +64,7 @@ dependencies {
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.zhy:autolayout:1.4.3'
+//    compile 'io.card:android-sdk:5.4.0' //信用卡查询
 //    compile project(':PushSDK')
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
