--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
                   android:exported="false" android:screenOrientation="portrait" />
         <activity android:name=".simple_activity.NumberActivity"
                   android:exported="false" android:screenOrientation="portrait" />
-        <activity android:name=".simple_activity.CarActivity"
+        <activity android:name=".simple_activity.SalaryActivity"
                   android:exported="false" android:screenOrientation="portrait" />
         <activity android:name=".simple_activity.ShortUrlActivity" android:screenOrientation="portrait" />
 
