--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,6 @@
-#Wed Mar 22 10:18:03 CST 2017
+#Tue Feb 06 10:59:13 CST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-#distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
-distributionUrl=http://dl.download.csdn.net/down11/20170109/8d79fa145a2273d26b92cf267b68f4dc.zip?response-content-disposition=attachment%3Bfilename%3D%22gradle-3.3-all.zip%22&OSSAccessKeyId=9q6nvzoJGowBj4q1&Expires=1489585652&Signature=vgwBMrcVlxPGKEmihSkAmrDsLMk%3D
-
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
