--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,16 @@ apply plugin: 'realm-android'
 apply plugin: 'com.jakewharton.butterknife'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "net.runningcode"
         minSdkVersion 19
-        targetSdkVersion 23
-        versionCode 5
-        versionName "1.2.2"
-        flavorDimensions "5"
+        targetSdkVersion 26
+        versionCode 6
+        versionName "1.2.5"
+        flavorDimensions "6"
         manifestPlaceholders = [ CHANNEL:"default" ]
         ndk {
 //            abiFilters "armeabi"
@@ -73,33 +73,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.zhy:autolayout:1.4.3'
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-//    compile ('com.balysv:material-ripple:1.0.2'){
-//        exclude module: 'support-v4'
-//    }
-//    compile 'com.android.support:recyclerview-v7:+'
-//    compile ('com.yolanda.nohttp:nohttp:1.0.0'){
-//        exclude module: 'support-v4'
-//    }
-//
-//    compile 'com.android.support:appcompat-v7:23.2.1'
-//    compile ('com.android.support:design:23.2.1'){
-//        exclude module: 'support-v4'
-//    }
-//    compile ('com.readystatesoftware.systembartint:systembartint:1.0.3'){
-//        exclude module: 'support-v4'
-//    }
-//    compile ('me.drakeet.materialdialog:library:1.2.8'){
-//        exclude module: 'support-v4'
-//    }
-//    compile ('com.github.bumptech.glide:glide:3.5.2'){
-//        exclude module: 'support-v4'
-//    }
 //    compile 'io.card:android-sdk:5.4.0' //信用卡查询
 //    compile project(':PushSDK')
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -129,7 +107,7 @@ android{
 //            }
 //        }
         variant.outputs.all {
-            outputFileName = "FastQuery${defaultConfig.versionName}_${releaseTime()}_${variant.productFlavors[0].name}.apk"
+            outputFileName = "FastQuery${defaultConfig.versionName}_new Data()_${variant.productFlavors[0].name}.apk"
         }
 
     }
