--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,13 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
     <permission
-        android:name="net.runningcode.permission.MIPUSH_RECEIVE"
+        android:name="${PKG_NAME}.permission.MIPUSH_RECEIVE"
         android:protectionLevel="signature"/>
 
-    <uses-permission android:name="net.runningcode.permission.MIPUSH_RECEIVE"/>
+    <uses-permission android:name="${PKG_NAME}.permission.MIPUSH_RECEIVE"/>
 
 
     <uses-feature android:name="android.hardware.camera"/>
@@ -106,6 +107,13 @@
             android:name="com.xiaomi.push.service.XMPushService"
             android:enabled="true"
             android:process=":pushservice"/>
+        <service
+            android:name="com.xiaomi.push.service.XMJobService"
+            android:enabled="true"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:process=":pushservice"/>
+
         <service
             android:name="com.xiaomi.mipush.sdk.PushMessageHandler"
             android:enabled="true"
